# libexpat

./: .gitignore  .travis.yml  CMakeLists.txt  ConfigureChecks.cmake  README.md  appveyor.yml  expat_config.h.in  libexpat.kdev4  libexpat.pc.in
.kdev4/: libexpat.kdev4
cmake/: ConfigureChecks.cmake  FindCheck.cmake  config.h.in  libexpat_config.h.in
docs/: CMakeLists.txt  Doxyfile.cmake.in
docs/doxygen/: CMakeLists.txt  Doxyfile-pristine  Doxyfile.cmake.in
expat/: expat.sln
expat/examples/: elements.rc  elements.vcxproj  elements.vcxproj.filters  outline.rc  outline.vcxproj  outline.vcxproj.filters  resource.h
expat/lib/: expat.rc  expat.vcxproj  expat.vcxproj.filters  expat_static.vcxproj  expat_static.vcxproj.filters  expatw.rc  expatw.vcxproj  expatw.vcxproj.filters  expatw_static.vcxproj
expat/tests/: runtests.vcxproj
expat/tests/benchmark/: benchmark.vcxproj
expat/win/Output/: MANIFEST.txt
expat/xmlwf/: resource.h  xmlwf.rc  xmlwf.vcxproj  xmlwf.vcxproj.filters
platform/nix/: libexpat.pc.in
platform/win/: libexpat.rc.in  resource.h
src/libexpat/: expat.h  expat_external.h  loadlibrary.c  resource.h  siphash.h  winconfig.h  xmlparse.c  xmlrole.c  xmltok.c
src/xmlwf/: xmlfile.c
tests/: CMakeLists.txt  chardata.c  runtests.c  structdata.c
tools/platform/win/: expat-x64-32.iss
